# ifcbproc

./: .gitignore  README.md  cli.py  pyproject.toml  requirements.txt
scripts/: test.sh
